--------
v3.0-cvs
--------

[jan] Try to create ISO-8859-1 encoded PDFs if this matches the user's language.
[jan] Add script to convert notes to UTF-8 in the backend.


----------
v2.2.5-cvs
----------




------
v2.2.4
------

[mjr] Do not remove history entries when removing user data (Bug #8755).


------
v2.2.3
------

[jan] Add and fix Oracle SQL scripts.
[jan] Add Croatian translation (Matej Vela <matej.vela@carnet.hr>).


------
v2.2.2
------

[mms] Upgrade prototype.js to v1.6.1.
[jan] Fix synchronization with output compression enabled (Bug #7769).
[jan] Add passphrase confirmation field (Bug #7379).
[cjh] Work around BC break with Horde versions before 3.2 (Bug #7820).
[cjh] Add URL access to notes by "starts-with" search on the note title.
[cjh] Add hooks for altering the displayed note body and showing help text next
      to the note entry field.
[cjh] Explicitly load DB library (Bug #7648).
[jan] Fix "replace" API method (Alfonso Marín Marín <almarin@um.es>, Bug #7436).
[cjh] Add a PostgreSQL-specific upgrade script.
[jan] Change group field in shares table to work with LDAP groups (Bug #6883).
[jan] Fix user name conversion with user hooks in the notepad panel (Bug #7366).


------
v2.2.1
------

[jan] Log moving of memos in the history backend (Bug #3207).
[jan] Add Basque translation (Euskal Herriko Unibertsitatea EHU/UPV
      <xabier.arrieta@ehu.es>).
[mjr] Remove user permissions on all shares when deleting a user.
[mjr] Fix issue with removeUserData api that caused the deleted user's task list
      to not be deleted (Bug #6969).


----
v2.2
----

[mjr] Fix issue with removeUserData api that caused the deleted user's task list
      to not be deleted (Bug #6969).
[cjh] Improve resource usage in datatree_to_sql share migration script
      (Bug #6740).
[jan] Fix exporting and synchronization of encrypted notes.


--------
v2.2-RC3
--------

[cjh] Apply fix for http://dev.rubyonrails.org/ticket/11473 to prototype.js
      (Request #6590).