@@ -69,26 +69,6 @@ class Mnemo_DeleteNotepadForm extends Horde_Form {
             }
         }
 
-        // Make sure we still own at least one notepad.
-        if (count(Mnemo::listNotepads(true)) == 0) {
-            // If the default share doesn't exist then create it.
-            if (!$GLOBALS['mnemo_shares']->exists($GLOBALS['registry']->getAuth())) {
-
-                $identity = $GLOBALS['injector']->getInstance('Horde_Core_Factory_Identity')->create();
-                $name = $identity->getValue('fullname');
-                if (trim($name) == '') {
-                    $name = $GLOBALS['registry']->getAuth();
-                }
-                try {
-                    $notepad = $GLOBALS['mnemo_shares']->newShare($GLOBALS['registry']->getAuth(), $GLOBALS['registry']->getAuth());
-                } catch (Horde_Share_Exception $e) {
-                    return;
-                }
-                $notepad->set('name', sprintf(_("%s's Notepad"), $name));
-                $GLOBALS['mnemo_shares']->addShare($notepad);
-            }
-        }
-
         return true;
     }
 
