@@ -2,6 +2,8 @@
 v3.0-cvs
 --------
 
+[jan] Default notepads no longer have the user name as the ID.
+[jan] Create a default notepad if the user doesn't own any yet.
 [jan] Try to create ISO-8859-1 encoded PDFs if this matches the user's language.
 [jan] Add script to convert notes to UTF-8 in the backend.
 
